--- a/src/Notes/WebDev/Spring/IoC/Inversion of Control.html
+++ b/src/Notes/WebDev/Spring/IoC/Inversion of Control.html
@@ -55,7 +55,7 @@ So Inversion Control is externalizing the construction and management of objects
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/IoC.png" alt="IoC" style="width:550px;height:300px;">
+<img src="https://albamr09.github.io/public/assets/IoC.png" alt="IoC" style="width:550px;height:300px;">
 </p>
 
 <ul>
